# hw4

./: .gitignore  CMakeLists.txt  mc8395_hw4_q1.cpp  mc8395_hw4_q2.cpp  mc8395_hw4_q3.cpp  mc8395_hw4_q4.cpp  mc8395_hw4_q5.cpp  mc8395_hw6_q6.cpp
