cmake_minimum_required(VERSION 3.15)
project(hw4)

set(CMAKE_CXX_STANDARD 14)




add_executable(mc8395_hw4_q2 mc8395_hw4_q2.cpp)
add_executable(mc8395_hw4_q1 mc8395_hw4_q1.cpp)
add_executable(mc8395_hw4_q3 mc8395_hw4_q3.cpp)
add_executable(mc8395_hw4_q4 mc8395_hw4_q4.cpp)
add_executable(mc8395_hw4_q5 mc8395_hw4_q5.cpp)
add_executable(mc8395_hw6_q6 mc8395_hw6_q6.cpp)